# dpdk-nfv

./: .gitignore  .gitmodules  Makefile  README.md  fakegen.c  flake.nix  gen_flame.sh  meson.build  meson_options.txt  parse.py  pktgen-config.txt  run.sh  shell.nix
rust-nfv/: Cargo.toml
rust-nfv/src/: lib.rs  maglev.rs  nf2.rs  nf3.rs  nf4.rs  nf5.rs  packet.rs  packettool.rs
scripts/: parse.py  parse_papi.py  run.sh  run_per_nf.sh  run_per_nf_papi.sh
src/: main.c  main.cpp  meson.build  nf1.cpp  nf1.hpp  nf2.cpp  nf2.hpp  nf3.cpp  nf3.hpp  nf4.cpp  nf4.hpp  nfv.cpp  nfv.hpp  packettool.cpp  packettool.hpp  trampolines.S
src/libnfv/: hashmap.c  hashmap.h  ls.ld  maglev.c  maglev.h  maglev.o.s  maglev.s  meson.build  nf1.c  nf1.cpp  nf1.hpp  nf1.so.elf  nf2.c  nf2.cpp  nf2.hpp  nf3.c  nf3.cpp  nf3.hpp  nf4.c  nf4.cpp  nf4.hpp  nf4.o.s  nfv.build.sh  nfv.c  nfv.cpp  nfv.h  nfv.hpp  nfv_C.c  packettool.c  packettool.cpp  packettool.h  packettool.hpp
src/libnfv/subprojects/: libsashstore.wrap
src/libtrampoline/: meson.build  trampolines.S
src/rust-nfv/: Cargo.toml  x86_64-unknown-linux-gnu-nosimd.json
src/rust-nfv/src/: lib.rs  maglev.rs  nf1.rs  nf2.rs  nf3.rs  nf4.rs  nfv.rs  packet.rs  packettool.rs
subprojects/: libsashstore.wrap
