[package]
name = "rust-nfv"
version = "0.1.0"
authors = ["Tianjiao Huang <git@tjhu.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rust_nfv"
crate-type = ["staticlib", "lib"]

[profile.release]
debug = true

[dependencies]
b2histogram = "1.0"
byteorder = { version = "1.3.4", default-features = false }
hashbrown = "0.7.2"
sashstore-redleaf = { path = "redleaf-nfv/lib/external/sashstore" }

[dependencies.fnv]
git = "https://github.com/servo/rust-fnv"
default-features = false

[dependencies.twox-hash]
version = "1.5.0"
default-features = false
